--- a/click_to_call/templates/chart.html
+++ b/click_to_call/templates/chart.html
@@ -53,5 +53,6 @@ data : [{% for sub_item in item %} {{sub_item}}, {% endfor %}]
 var myLine = new Chart(document.getElementById("canvas").getContext("2d")).Line(lineChartData);
 
 </script>
+<!-- How will final chart will have number displayed as well? Exercise ;)-->
 </body>
 </html>
