--- a/click_to_call/templates/chart.html
+++ b/click_to_call/templates/chart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Line Chart</title>
-<script src="/site_media/js/Chart.js"></script>
+<script src="/site_media/Chart.js"></script>
 <style>
 canvas{
 }
