--- a/click_to_call/templates/chart.html
+++ b/click_to_call/templates/chart.html
@@ -10,7 +10,7 @@
 		numberArray.push({{number_item}});
 	{% endfor %}
 </script>
-<style>
+<style>c
 canvas{
 }
 </style>
@@ -68,7 +68,6 @@ Legends:</br></br>
 </div>
 
 <script>
-	alert("Helloo");
 	for(ele=0; ele < numberColorArray.length; ele++)
 	{
 		var innerSpan = document.getElementById("legends").innerHTML;
