--- a/click_to_call/templates/chart.html
+++ b/click_to_call/templates/chart.html
@@ -3,6 +3,7 @@
 <head>
 <title>Line Chart</title>
 <script src="/site_media/js/Chart.js"></script>
+<link rel="stylesheet" href="/site_media/css/style.css" type="text/css" />
 <script>
 	var numberArray = new Array();
 	var numberColorArray = new Array();
